Specify SerDes