@@ -7,15 +7,13 @@ import static io.github.loicgreffier.streams.branch.constant.Topic.PERSON_BRANCH
 import static io.github.loicgreffier.streams.branch.constant.Topic.PERSON_TOPIC;
 import static org.apache.kafka.streams.StreamsConfig.APPLICATION_ID_CONFIG;
 import static org.apache.kafka.streams.StreamsConfig.BOOTSTRAP_SERVERS_CONFIG;
-import static org.apache.kafka.streams.StreamsConfig.DEFAULT_KEY_SERDE_CLASS_CONFIG;
-import static org.apache.kafka.streams.StreamsConfig.DEFAULT_VALUE_SERDE_CLASS_CONFIG;
 import static org.apache.kafka.streams.StreamsConfig.STATE_DIR_CONFIG;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import io.confluent.kafka.schemaregistry.testutil.MockSchemaRegistry;
-import io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde;
 import io.github.loicgreffier.avro.KafkaPerson;
 import io.github.loicgreffier.streams.branch.app.KafkaStreamsTopology;
+import io.github.loicgreffier.streams.branch.serdes.SerdesUtils;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -23,8 +21,6 @@ import java.time.Instant;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-import org.apache.kafka.common.serialization.Serde;
-import org.apache.kafka.common.serialization.Serdes;
 import org.apache.kafka.common.serialization.StringDeserializer;
 import org.apache.kafka.common.serialization.StringSerializer;
 import org.apache.kafka.streams.KeyValue;
@@ -54,9 +50,11 @@ class KafkaStreamsBranchApplicationTest {
         properties.setProperty(APPLICATION_ID_CONFIG, "streams-branch-test");
         properties.setProperty(BOOTSTRAP_SERVERS_CONFIG, "dummy:1234");
         properties.setProperty(STATE_DIR_CONFIG, STATE_DIR);
-        properties.setProperty(DEFAULT_KEY_SERDE_CLASS_CONFIG, Serdes.StringSerde.class.getName());
-        properties.setProperty(DEFAULT_VALUE_SERDE_CLASS_CONFIG, SpecificAvroSerde.class.getName());
         properties.setProperty(SCHEMA_REGISTRY_URL_CONFIG, MOCK_SCHEMA_REGISTRY_URL);
+
+        // Create SerDes
+        Map<String, String> config = Map.of(SCHEMA_REGISTRY_URL_CONFIG, MOCK_SCHEMA_REGISTRY_URL);
+        SerdesUtils.setSerdesConfig(config);
 
         // Create topology
         StreamsBuilder streamsBuilder = new StreamsBuilder();
@@ -67,26 +65,25 @@ class KafkaStreamsBranchApplicationTest {
             Instant.parse("2000-01-01T01:00:00Z")
         );
 
-        // Create Serde for input and output topics
-        Serde<KafkaPerson> personSerde = new SpecificAvroSerde<>();
-        Map<String, String> config = Map.of(SCHEMA_REGISTRY_URL_CONFIG, MOCK_SCHEMA_REGISTRY_URL);
-        personSerde.configure(config, false);
-
-        inputTopic = testDriver.createInputTopic(PERSON_TOPIC, new StringSerializer(), personSerde.serializer());
+        inputTopic = testDriver.createInputTopic(
+            PERSON_TOPIC,
+            new StringSerializer(),
+            SerdesUtils.<KafkaPerson>getValueSerdes().serializer()
+        );
         outputTopicA = testDriver.createOutputTopic(
             PERSON_BRANCH_A_TOPIC,
             new StringDeserializer(),
-            personSerde.deserializer()
+            SerdesUtils.<KafkaPerson>getValueSerdes().deserializer()
         );
         outputTopicB = testDriver.createOutputTopic(
             PERSON_BRANCH_B_TOPIC,
             new StringDeserializer(),
-            personSerde.deserializer()
+            SerdesUtils.<KafkaPerson>getValueSerdes().deserializer()
         );
         outputTopicDefault = testDriver.createOutputTopic(
             PERSON_BRANCH_DEFAULT_TOPIC,
             new StringDeserializer(),
-            personSerde.deserializer()
+            SerdesUtils.<KafkaPerson>getValueSerdes().deserializer()
         );
     }
 
@@ -103,8 +100,8 @@ class KafkaStreamsBranchApplicationTest {
 
         List<KeyValue<String, KafkaPerson>> results = outputTopicA.readKeyValuesToList();
 
-        assertEquals("HOMER", results.get(0).value.getFirstName());
-        assertEquals("SIMPSON", results.get(0).value.getLastName());
+        assertEquals("HOMER", results.getFirst().value.getFirstName());
+        assertEquals("SIMPSON", results.getFirst().value.getLastName());
     }
 
     @Test
@@ -114,7 +111,7 @@ class KafkaStreamsBranchApplicationTest {
 
         List<KeyValue<String, KafkaPerson>> results = outputTopicB.readKeyValuesToList();
 
-        assertEquals(KeyValue.pair("1", person), results.get(0));
+        assertEquals(KeyValue.pair("1", person), results.getFirst());
     }
 
     @Test
@@ -124,7 +121,7 @@ class KafkaStreamsBranchApplicationTest {
 
         List<KeyValue<String, KafkaPerson>> results = outputTopicDefault.readKeyValuesToList();
 
-        assertEquals(KeyValue.pair("1", person), results.get(0));
+        assertEquals(KeyValue.pair("1", person), results.getFirst());
     }
 
     private KafkaPerson buildKafkaPerson(String firstName, String lastName) {
