@@ -5,16 +5,14 @@ import static io.github.loicgreffier.streams.map.constant.Topic.PERSON_MAP_TOPIC
 import static io.github.loicgreffier.streams.map.constant.Topic.PERSON_TOPIC;
 import static org.apache.kafka.streams.StreamsConfig.APPLICATION_ID_CONFIG;
 import static org.apache.kafka.streams.StreamsConfig.BOOTSTRAP_SERVERS_CONFIG;
-import static org.apache.kafka.streams.StreamsConfig.DEFAULT_KEY_SERDE_CLASS_CONFIG;
-import static org.apache.kafka.streams.StreamsConfig.DEFAULT_VALUE_SERDE_CLASS_CONFIG;
 import static org.apache.kafka.streams.StreamsConfig.STATE_DIR_CONFIG;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import io.confluent.kafka.schemaregistry.testutil.MockSchemaRegistry;
-import io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde;
 import io.github.loicgreffier.avro.CountryCode;
 import io.github.loicgreffier.avro.KafkaPerson;
 import io.github.loicgreffier.streams.map.app.KafkaStreamsTopology;
+import io.github.loicgreffier.streams.map.serdes.SerdesUtils;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -22,8 +20,6 @@ import java.time.Instant;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-import org.apache.kafka.common.serialization.Serde;
-import org.apache.kafka.common.serialization.Serdes;
 import org.apache.kafka.common.serialization.StringDeserializer;
 import org.apache.kafka.common.serialization.StringSerializer;
 import org.apache.kafka.streams.KeyValue;
@@ -51,9 +47,11 @@ class KafkaStreamsMapApplicationTest {
         properties.setProperty(APPLICATION_ID_CONFIG, "streams-map-test");
         properties.setProperty(BOOTSTRAP_SERVERS_CONFIG, "dummy:1234");
         properties.setProperty(STATE_DIR_CONFIG, STATE_DIR);
-        properties.setProperty(DEFAULT_KEY_SERDE_CLASS_CONFIG, Serdes.StringSerde.class.getName());
-        properties.setProperty(DEFAULT_VALUE_SERDE_CLASS_CONFIG, SpecificAvroSerde.class.getName());
         properties.setProperty(SCHEMA_REGISTRY_URL_CONFIG, MOCK_SCHEMA_REGISTRY_URL);
+
+        // Create SerDes
+        Map<String, String> config = Map.of(SCHEMA_REGISTRY_URL_CONFIG, MOCK_SCHEMA_REGISTRY_URL);
+        SerdesUtils.setSerdesConfig(config);
 
         // Create topology
         StreamsBuilder streamsBuilder = new StreamsBuilder();
@@ -64,16 +62,15 @@ class KafkaStreamsMapApplicationTest {
             Instant.parse("2000-01-01T01:00:00Z")
         );
 
-        // Create Serde for input and output topics
-        Serde<KafkaPerson> personSerde = new SpecificAvroSerde<>();
-        Map<String, String> config = Map.of(SCHEMA_REGISTRY_URL_CONFIG, MOCK_SCHEMA_REGISTRY_URL);
-        personSerde.configure(config, false);
-
-        inputTopic = testDriver.createInputTopic(PERSON_TOPIC, new StringSerializer(), personSerde.serializer());
+        inputTopic = testDriver.createInputTopic(
+            PERSON_TOPIC,
+            new StringSerializer(),
+            SerdesUtils.<KafkaPerson>getValueSerdes().serializer()
+        );
         outputTopic = testDriver.createOutputTopic(
             PERSON_MAP_TOPIC,
             new StringDeserializer(),
-            personSerde.deserializer()
+            SerdesUtils.<KafkaPerson>getValueSerdes().deserializer()
         );
     }
 
@@ -90,9 +87,9 @@ class KafkaStreamsMapApplicationTest {
 
         List<KeyValue<String, KafkaPerson>> results = outputTopic.readKeyValuesToList();
 
-        assertEquals("SIMPSON", results.get(0).key);
-        assertEquals("HOMER", results.get(0).value.getFirstName());
-        assertEquals("SIMPSON", results.get(0).value.getLastName());
+        assertEquals("SIMPSON", results.getFirst().key);
+        assertEquals("HOMER", results.getFirst().value.getFirstName());
+        assertEquals("SIMPSON", results.getFirst().value.getLastName());
     }
 
     private KafkaPerson buildKafkaPerson() {
