@@ -7,19 +7,17 @@ import static io.github.loicgreffier.streams.outerjoin.stream.stream.constant.To
 import static io.github.loicgreffier.streams.outerjoin.stream.stream.constant.Topic.PERSON_TOPIC_TWO;
 import static org.apache.kafka.streams.StreamsConfig.APPLICATION_ID_CONFIG;
 import static org.apache.kafka.streams.StreamsConfig.BOOTSTRAP_SERVERS_CONFIG;
-import static org.apache.kafka.streams.StreamsConfig.DEFAULT_KEY_SERDE_CLASS_CONFIG;
-import static org.apache.kafka.streams.StreamsConfig.DEFAULT_VALUE_SERDE_CLASS_CONFIG;
 import static org.apache.kafka.streams.StreamsConfig.STATE_DIR_CONFIG;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
 import io.confluent.kafka.schemaregistry.testutil.MockSchemaRegistry;
-import io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde;
 import io.github.loicgreffier.avro.KafkaJoinPersons;
 import io.github.loicgreffier.avro.KafkaPerson;
 import io.github.loicgreffier.streams.outerjoin.stream.stream.app.KafkaStreamsTopology;
 import io.github.loicgreffier.streams.outerjoin.stream.stream.constant.StateStore;
+import io.github.loicgreffier.streams.outerjoin.stream.stream.serdes.SerdesUtils;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -27,8 +25,6 @@ import java.time.Instant;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-import org.apache.kafka.common.serialization.Serde;
-import org.apache.kafka.common.serialization.Serdes;
 import org.apache.kafka.common.serialization.StringDeserializer;
 import org.apache.kafka.common.serialization.StringSerializer;
 import org.apache.kafka.streams.KeyValue;
@@ -63,9 +59,11 @@ class KafkaStreamsOuterJoinStreamStreamApplicationTest {
         properties.setProperty(APPLICATION_ID_CONFIG, "streams-outer-join-stream-stream-test");
         properties.setProperty(BOOTSTRAP_SERVERS_CONFIG, "dummy:1234");
         properties.setProperty(STATE_DIR_CONFIG, STATE_DIR);
-        properties.setProperty(DEFAULT_KEY_SERDE_CLASS_CONFIG, Serdes.StringSerde.class.getName());
-        properties.setProperty(DEFAULT_VALUE_SERDE_CLASS_CONFIG, SpecificAvroSerde.class.getName());
         properties.setProperty(SCHEMA_REGISTRY_URL_CONFIG, MOCK_SCHEMA_REGISTRY_URL);
+
+        // Create SerDes
+        Map<String, String> config = Map.of(SCHEMA_REGISTRY_URL_CONFIG, MOCK_SCHEMA_REGISTRY_URL);
+        SerdesUtils.setSerdesConfig(config);
 
         // Create topology
         StreamsBuilder streamsBuilder = new StreamsBuilder();
@@ -76,35 +74,32 @@ class KafkaStreamsOuterJoinStreamStreamApplicationTest {
             Instant.parse("2000-01-01T01:00:00Z")
         );
 
-        // Create Serde for input and output topics
-        Serde<KafkaPerson> personSerde = new SpecificAvroSerde<>();
-        Serde<KafkaJoinPersons> joinPersonsSerde = new SpecificAvroSerde<>();
-        Map<String, String> config = Map.of(SCHEMA_REGISTRY_URL_CONFIG, MOCK_SCHEMA_REGISTRY_URL);
-        personSerde.configure(config, false);
-        joinPersonsSerde.configure(config, false);
-
-        leftInputTopic = testDriver.createInputTopic(PERSON_TOPIC, new StringSerializer(), personSerde.serializer());
+        leftInputTopic = testDriver.createInputTopic(
+            PERSON_TOPIC,
+            new StringSerializer(),
+            SerdesUtils.<KafkaPerson>getValueSerdes().serializer()
+        );
         rightInputTopic = testDriver.createInputTopic(
             PERSON_TOPIC_TWO,
             new StringSerializer(),
-            personSerde.serializer()
+            SerdesUtils.<KafkaPerson>getValueSerdes().serializer()
         );
         rekeyLeftOutputTopic = testDriver.createOutputTopic(
             "streams-outer-join-stream-stream-test-" + PERSON_OUTER_JOIN_STREAM_STREAM_REKEY_TOPIC
                 + "-left-repartition",
             new StringDeserializer(),
-            personSerde.deserializer()
+            SerdesUtils.<KafkaPerson>getValueSerdes().deserializer()
         );
         rekeyRightOutputTopic = testDriver.createOutputTopic(
             "streams-outer-join-stream-stream-test-" + PERSON_OUTER_JOIN_STREAM_STREAM_REKEY_TOPIC
                 + "-right-repartition",
             new StringDeserializer(),
-            personSerde.deserializer()
+            SerdesUtils.<KafkaPerson>getValueSerdes().deserializer()
         );
         joinOutputTopic = testDriver.createOutputTopic(
             PERSON_OUTER_JOIN_STREAM_STREAM_TOPIC,
             new StringDeserializer(),
-            joinPersonsSerde.deserializer()
+            SerdesUtils.<KafkaJoinPersons>getValueSerdes().deserializer()
         );
     }
 
@@ -126,8 +121,8 @@ class KafkaStreamsOuterJoinStreamStreamApplicationTest {
         List<KeyValue<String, KafkaPerson>> topicOneResults = rekeyLeftOutputTopic.readKeyValuesToList();
         List<KeyValue<String, KafkaPerson>> topicTwoResults = rekeyRightOutputTopic.readKeyValuesToList();
 
-        assertEquals(KeyValue.pair("Simpson", leftPerson), topicOneResults.get(0));
-        assertEquals(KeyValue.pair("Simpson", rightPerson), topicTwoResults.get(0));
+        assertEquals(KeyValue.pair("Simpson", leftPerson), topicOneResults.getFirst());
+        assertEquals(KeyValue.pair("Simpson", rightPerson), topicTwoResults.getFirst());
     }
 
     @Test
@@ -143,7 +138,7 @@ class KafkaStreamsOuterJoinStreamStreamApplicationTest {
 
         List<KeyValue<String, KafkaJoinPersons>> results = joinOutputTopic.readKeyValuesToList();
 
-        assertEquals("Simpson", results.get(0).key);
+        assertEquals("Simpson", results.getFirst().key);
         assertEquals(homer, results.get(0).value.getPersonOne());
         assertEquals(marge, results.get(0).value.getPersonTwo());
 
@@ -203,7 +198,7 @@ class KafkaStreamsOuterJoinStreamStreamApplicationTest {
         List<KeyValue<String, KafkaJoinPersons>> results = joinOutputTopic.readKeyValuesToList();
 
         // The right value is null because Marge arrived too late for Homer.
-        assertEquals("Simpson", results.get(0).key);
+        assertEquals("Simpson", results.getFirst().key);
         assertEquals(homer, results.get(0).value.getPersonOne());
         assertNull(results.get(0).value.getPersonTwo());
 
@@ -263,7 +258,7 @@ class KafkaStreamsOuterJoinStreamStreamApplicationTest {
 
         // No record in the secondary stream matched the first record in the primary stream
         // at the end of the join window + grace period (01:06:00). Null value is emitted.
-        assertEquals("Simpson", results.get(0).key);
+        assertEquals("Simpson", results.getFirst().key);
         assertEquals(homer, results.get(0).value.getPersonOne());
         assertNull(results.get(0).value.getPersonTwo());
 
